2011-05-23  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Generated parametrized URI's
	* [TASK] Added dynamic retrieval of services
	* [TASK] Added dynamic retrieval of organizations
	* [TASK] Removed global declaration with XCLASS definition
	* [TASK] Added TypoScript for including jQuery

2011-05-21  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Added skeleton for the form selector plugin

2011-05-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Added support of organizations
	* [TASK] Retrieving the list of communities using a CSV data file

2011-04-22  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raised version to 1.1.2

2011-04-21  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Integrated Italian translation

2011-04-08  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raised version to 1.1.1
	* [BUGFIX] #25848: Service version is not taken into account
	* [DOCUMENTATION] Update constant editor screenshot to reflect change of constant name
	* [DOCUMENTATION] Fixed typo in cache configuration
	* [BUGFIX] #25846: Version wizard fails to save configuration on TYPO3 4.4

2011-03-23  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 1.1.0
	* Task #13767: Complete German translation

2011-03-11  Xavier Perseguers  <xavier@causal.ch>

	* Added feature #13769: Many blocks have no more HTML when imported with the module

2011-03-10  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 1.0.0 (stable)
	* Added PDF version of the documentation
	* Allowed HTML in blocks fee and remarks
	* Fixed exception when using LIST mode (feature #13710)
	* Integrated suggestion #13731: Documentation corrections
	* Added exception handling when unsupported language is used
	* Updated step-by-step tutorial in documentation
	* Added CSS classes to standard templates

2011-03-09  Xavier Perseguers  <xavier@causal.ch>

	* Added feature #13710: Allow a service or a list of services to be specified by TypoScript
	* Updated screenshots in documentation
