@@ -1,3 +1,7 @@
+2011-05-24  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Enhanced URL generation with TypoScript
+
 2011-05-23  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Generated parametrized URI's
